src/objects/ffr__AccountingIntegration__mdt.object
<CustomObject>
    <fields>
        <fullName>ffr__Callback__c</fullName>
        <label>Callback Class</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__PeriodField__c</fullName>
        <label>Period Field</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__PeriodObject__c</fullName>
        <label>Period Object</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Accounting Integration</label>
    <pluralLabel>Accounting Integrations</pluralLabel>
</CustomObject>